Fixed bug where gulp did not watch the JavaScript files. Updated the gulp file. Updated the readme file.

--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,7 @@
   This is a gulp starter!
   
   <!--build:js js/main.min.js -->
-  <script src="js/lib/a-library.js"></script>
-  <script src="js/lib/another-library.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
   <!-- endbuild -->
 </body>
 
